--- a/videy.html
+++ b/videy.html
@@ -15,7 +15,7 @@
   <div class="video-wrapper">
 
     <video id="video" controls playsinline>
-        <source src="https://cdn.videy.co/x3lkEf5M1.mp4" type="video/mp4">
+        <source src="https://cdn.videy.co/VUQ3U8JN1.mp4" type="video/mp4">
     </video>
 
     <button id="videoOverlay" aria-label="overlay">
@@ -41,6 +41,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
